# WB2

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: 01_loading_data.ipynb  02_getting_activations.ipynb  03_concepts_detection.ipynb  03_concepts_detection_torch.ipynb  04_concepts_detection_after_debiasing.ipynb  04_concepts_detection_after_debiasing_torch.ipynb  Instrukcja_obsługo_modelu.ipynb
Notebooks/checkpoint1/: 05_recovery_analysis.ipynb
Workspace/: Untitled.ipynb
archive/: wczytywanie_danych.ipynb
archive/checkpoint1/: 01_data_acquisition.ipynb  02_activation_extraction.ipynb  03_cav_generation.ipynb  README.md
archive/scripts/: download_data.ipynb
checkpoints/: README.md
checkpoints/checkpoint_02/: 00_sequential_pclark_debiasing.ipynb  01_cav_debiasing.ipynb  02_concept_recovery.ipynb  02_concept_recovery_diff_means.ipynb  02_concept_recovery_lr.ipynb  02_concept_recovery_pclarc.ipynb  README.md
data/: metadata.csv
data/debiased_concepts_detection_results/: 00_debiased_results.csv  01_debiased_results.csv  02_debiased_results.csv  03_debiased_results.csv  04_debiased_results.csv  05_debiased_results.csv  06_debiased_results.csv  07_debiased_results.csv  08_debiased_results.csv  09_debiased_results.csv  10_debiased_results.csv  11_debiased_results.csv  12_debiased_results.csv  13_debiased_results.csv  14_debiased_results.csv  15_debiased_results.csv  (+8 more)
scripts/: README.md  download_data.ipynb  migrate_csv_to_parquet.py  sync_data.sh
software/: README.md  __init__.py  metrics.py  prompts.py  torch_lr.py  viz.py
(+197 files in other folders)
