[project]
name = "wb2"
version = "0.1.0"
description = "CLIP concept debiasing on CelebA (Warsztaty Badawcze 2)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.40",
    "datasets>=2.18",
    "huggingface-hub>=0.23",
    "pandas>=2.0",
    "pyarrow>=15,<24",
    "numpy>=1.24,<3",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pillow>=10",
    "tqdm>=4.66",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
]

# Source of truth: pyproject.toml + uv.lock.
# Colab/RunPod compatibility: regenerate requirements.txt via
#   uv export --format requirements-txt --no-hashes --no-emit-project -o requirements.txt

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["software"]
